--- a/gui/src/main/resources/language.fxml
+++ b/gui/src/main/resources/language.fxml
@@ -6,7 +6,7 @@
 
 <BorderPane prefHeight="400.0" prefWidth="600.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.vocabhunter.gui.controller.LanguageController">
    <top>
-      <Label text="%language.title" BorderPane.alignment="CENTER" />
+      <Label text="LANGUAGE CHOICE" BorderPane.alignment="CENTER" fx:id="labelTitle" />
    </top>
    <center>
       <VBox alignment="CENTER" BorderPane.alignment="CENTER" fx:id="boxButtons" />
