--- a/gui/src/main/resources/main.fxml
+++ b/gui/src/main/resources/main.fxml
@@ -65,12 +65,7 @@
                                             <MenuItem fx:id="menuSetupFilters" mnemonicParsing="false" text="%main.menu.settings.filters.setup" />
                                             <CheckMenuItem fx:id="menuEnableFilters" mnemonicParsing="false" selected="true" text="%main.menu.settings.filters.enable" />
                                             <SeparatorMenuItem mnemonicParsing="false" />
-                                            <Menu fx:id="menuLanguage" mnemonicParsing="false" text="%main.menu.language.menu">
-                                                <items>
-                                                    <RadioMenuItem fx:id="menuEnglish" mnemonicParsing="false" text="%main.menu.language.english" />
-                                                    <RadioMenuItem fx:id="menuSpanish" mnemonicParsing="false" text="%main.menu.language.spanish" />
-                                                </items>
-                                           </Menu>
+                                            <MenuItem fx:id="menuLanguage" mnemonicParsing="false" text="%main.menu.settings.language" />
                                         </items>
                                     </Menu>
                                     <Menu fx:id="menuHelp" mnemonicParsing="false" text="%main.menu.help">
