Improved styling of the language dialogue title

--- a/gui/src/main/resources/language.css
+++ b/gui/src/main/resources/language.css
@@ -15,3 +15,7 @@
 .languagePane .languageButton {
     -fx-max-width: Infinity;
 }
+.languagePane .languageTitle {
+    -fx-pref-width: 30em;
+    -fx-alignment: center;
+}
