--- a/gui/src/main/resources/main.fxml
+++ b/gui/src/main/resources/main.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.CheckMenuItem?>
@@ -24,6 +23,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 <?import org.controlsfx.control.StatusBar?>
+<?import org.controlsfx.glyphfont.Glyph?>
 
 <!--
   ~ Open Source Software published under the Apache Licence, Version 2.0.
@@ -86,7 +86,7 @@
                                             <Tooltip text="%main.button.new.tip" />
                                         </tooltip>
                                         <graphic>
-                                          <FontAwesomeIconView styleClass="buttonNewIcon" />
+                                            <Glyph fontFamily="FontAwesome" icon="FILE_ALT" styleClass="fontAwesomeIcon" />
                                         </graphic>
                                     </Button>
                                     <Button fx:id="buttonOpen" mnemonicParsing="false" styleClass="buttonOpen" text="%main.button.open">
@@ -94,7 +94,7 @@
                                             <Tooltip text="%main.button.open.tip" />
                                         </tooltip>
                                         <graphic>
-                                            <FontAwesomeIconView styleClass="buttonOpenIcon" />
+                                            <Glyph fontFamily="FontAwesome" icon="FOLDER_OPEN_ALT" styleClass="fontAwesomeIcon" />
                                         </graphic>
                                     </Button>
                                     <Button fx:id="buttonSave" mnemonicParsing="false" styleClass="buttonSave" text="%main.button.save">
@@ -102,7 +102,7 @@
                                             <Tooltip text="%main.button.save.tip" />
                                         </tooltip>
                                         <graphic>
-                                            <FontAwesomeIconView styleClass="buttonSaveIcon" />
+                                            <Glyph fontFamily="FontAwesome" icon="SAVE" styleClass="fontAwesomeIcon" />
                                         </graphic>
                                     </Button>
                                     <Button fx:id="buttonExport" mnemonicParsing="false" styleClass="buttonExport" text="%main.button.export">
@@ -110,7 +110,7 @@
                                             <Tooltip text="%main.button.export.tip" />
                                         </tooltip>
                                         <graphic>
-                                            <FontAwesomeIconView styleClass="buttonExportIcon" />
+                                            <Glyph fontFamily="FontAwesome" icon="SHARE_SQUARE_ALT" styleClass="fontAwesomeIcon" />
                                         </graphic>
                                     </Button>
                                     <Separator orientation="VERTICAL" />
@@ -119,7 +119,7 @@
                                             <Tooltip text="%main.button.filters.setup.tip" />
                                         </tooltip>
                                         <graphic>
-                                            <FontAwesomeIconView styleClass="buttonSetupFiltersIcon" />
+                                            <Glyph fontFamily="FontAwesome" icon="FILTER" styleClass="fontAwesomeIcon" />
                                         </graphic>
                                     </Button>
                                     <CheckBox fx:id="buttonEnableFilters" mnemonicParsing="false" selected="true" text="%main.button.filters.enable">
@@ -166,13 +166,13 @@
                                        <children>
                                           <Label styleClass="new">
                                               <graphic>
-                                                  <FontAwesomeIconView styleClass="buttonNewIcon" />
+                                                  <Glyph fontFamily="FontAwesome" icon="FILE_ALT" styleClass="fontAwesomeIcon" />
                                               </graphic>
                                           </Label>
                                            <Label styleClass="new" text="%main.session.new" GridPane.columnIndex="1" />
                                           <Label styleClass="open" GridPane.rowIndex="1" >
                                               <graphic>
-                                                  <FontAwesomeIconView styleClass="buttonOpenIcon" />
+                                                  <Glyph fontFamily="FontAwesome" icon="FOLDER_OPEN_ALT" styleClass="fontAwesomeIcon" />
                                               </graphic>
                                           </Label>
                                            <Label styleClass="open" text="%main.session.open" GridPane.columnIndex="1" GridPane.rowIndex="1" />
