--- a/gui/src/main/resources/about.css
+++ b/gui/src/main/resources/about.css
@@ -13,21 +13,11 @@
     -fx-font-size: 20;
     -fx-padding: 7 0 7 0;
 }
-.websiteIcon {
-    -glyph-name: HOME;
-}
-.twitterIcon {
-    -glyph-name: TWITTER;
-}
-.githubIcon {
-    -glyph-name: GITHUB;
-}
 .starIcon {
-    -glyph-name: STAR;
-    -glyph-size: 20;
+    -fx-font-size: 20;
 }
 .websiteIcon, .twitterIcon, .githubIcon {
-    -glyph-size: 30;
+    -fx-font-size: 30;
 }
 .about .boxAboutLabels {
     -fx-padding: 0 10 0 0;
