--- a/gui/src/main/resources/settings.fxml
+++ b/gui/src/main/resources/settings.fxml
@@ -4,7 +4,6 @@
   ~ Open Source Software published under the Apache Licence, Version 2.0.
   -->
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.CheckBox?>
@@ -18,6 +17,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import org.controlsfx.glyphfont.Glyph?>
 
 <BorderPane styleClass="settings" stylesheets="@main.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.vocabhunter.gui.controller.SettingsController">
     <bottom>
@@ -69,8 +69,8 @@
                        <graphic>
                         <HBox alignment="CENTER" spacing="2.0">
                            <children>
-                                 <FontAwesomeIconView styleClass="buttonFilterGridIcon" />
-                              <FontAwesomeIconView styleClass="buttonAddIcon" />
+                              <Glyph fontFamily="FontAwesome" icon="TABLE" styleClass="fontAwesomeIcon, buttonAddGridFileIcon" />
+                              <Glyph fontFamily="FontAwesome" icon="PLUS" styleClass="fontAwesomeIcon, buttonAddIcon" />
                            </children>
                         </HBox>
                        </graphic>
@@ -82,8 +82,8 @@
                      <graphic>
                         <HBox alignment="CENTER" spacing="2.0">
                            <children>
-                              <FontAwesomeIconView styleClass="buttonFilterSessionIcon" />
-                              <FontAwesomeIconView styleClass="buttonAddIcon" />
+                              <Glyph fontFamily="FontAwesome" icon="CHECK_SQUARE" styleClass="fontAwesomeIcon, buttonFilterSessionIcon" />
+                              <Glyph fontFamily="FontAwesome" icon="PLUS" styleClass="fontAwesomeIcon, buttonAddIcon" />
                            </children>
                         </HBox>
                      </graphic>
@@ -107,15 +107,15 @@
                                   <Label text="%filter.main.lists.empty.title" GridPane.columnSpan="2" />
                                   <HBox alignment="CENTER" spacing="2.0" GridPane.rowIndex="1">
                                       <children>
-                                          <FontAwesomeIconView styleClass="buttonFilterGridIcon" />
-                                          <FontAwesomeIconView styleClass="buttonAddIcon" />
+                                          <Glyph fontFamily="FontAwesome" icon="TABLE" styleClass="fontAwesomeIcon, buttonAddGridFileIcon" />
+                                          <Glyph fontFamily="FontAwesome" icon="PLUS" styleClass="fontAwesomeIcon, buttonAddIcon" />
                                       </children>
                                   </HBox>
                                   <Label text="%filter.main.lists.empty.grid" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
                                   <HBox alignment="CENTER" spacing="2.0" GridPane.rowIndex="2">
                                       <children>
-                                          <FontAwesomeIconView styleClass="buttonFilterSessionIcon" />
-                                          <FontAwesomeIconView styleClass="buttonAddIcon" />
+                                          <Glyph fontFamily="FontAwesome" icon="CHECK_SQUARE" styleClass="fontAwesomeIcon, buttonFilterSessionIcon" />
+                                          <Glyph fontFamily="FontAwesome" icon="PLUS" styleClass="fontAwesomeIcon, buttonAddIcon" />
                                       </children>
                                   </HBox>
                                   <Label text="%filter.main.lists.empty.session" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
